test/recursiveFunctionCapture4.slq

def main(){
	x:=H(0:ğ”¹);
	y:=0:ğ”¹; /// error
	def foo(n:!â„•):ğ”¹{
		if nâ‰ 0{ return x; }
		else if nâ‰ 0{ return foo(n sub 1); }
		else{
			measure(y);
			return x;
		}
	}
	return foo(2);
}
